[package]
name = "blast-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
blast-interface = { path = "../blast-interface" }
blast-proc-macros = { path = "../blast-proc-macros" }