[package]
name = "blast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blast-macros = { path = "../blast-macros" }
blast-interface = { path = "../blast-interface", features = ["rocket"] }
rocket = { version = "0.5.0-rc.3", features = ["json"], optional = true }
paste = "*"
