[package]
name = "blast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blast-macros = { path = "../blast-macros" }
blast-proc-macros = { path = "../blast-proc-macros" }
blast-interface = { path = "../blast-interface" }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
paste = "*"
